tests/snapshots/xwin-unpack.snap
---
source: src/main.rs
expression: help_text
---
Unpacks all of the downloaded packages to disk

Usage: unpack

Options:
  -h, --help
          Print help information

  -V, --version
          Print version information

